<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".view.ShopFragment" android:id="@+id/ShopFragment">
    <ImageView
            android:contentDescription="@string/trees_bg_blur_description"
            android:src="@drawable/flower_click_fragment_trees_bg_blur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/main_background"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="1.0"/>
    <ImageView
            android:contentDescription="@string/shelves_image_description"
            android:layout_width="408dp"
            android:layout_height="600dp" android:id="@+id/shelves_background"
            android:background="@drawable/shelves_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
            android:contentDescription="@string/navbar_background_description"
            android:layout_width="409dp"
            android:layout_height="175dp" android:id="@+id/navbar_icon"
            android:background="@drawable/poop_log"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:contentDescription="@string/shop_sign_image_description"
            android:layout_width="210dp"
            android:layout_height="80dp" android:id="@+id/shop_sign"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/shelves_background" app:layout_constraintVertical_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497" android:background="@drawable/icon_shop_sign"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="325dp"
            android:layout_height="73dp"
            android:id="@+id/navbar"
            app:layout_constraintBottom_toBottomOf="@+id/main_background"
            app:layout_constraintTop_toTopOf="@+id/navbar_icon" app:layout_constraintStart_toStartOf="@+id/navbar_icon"
            app:layout_constraintEnd_toEndOf="@+id/navbar_icon">
        <ImageButton
                android:contentDescription="@string/map_icon_description"
                android:layout_width="wrap_content"
                android:layout_height="70dp" android:id="@+id/map_icon" android:layout_weight="1"
                android:background="@drawable/icon_map"
        />
        <ImageButton
                android:contentDescription="@string/grow_icon_description"
                android:layout_width="wrap_content"
                android:layout_height="70dp" android:id="@+id/grow_icon" android:layout_weight="1"
                android:background="@drawable/icon_grow"
        />
        <ImageButton
                android:contentDescription="@string/inventory_icon_description"
                android:layout_width="wrap_content"
                android:layout_height="70dp" android:id="@+id/inventory_icon" android:layout_weight="1"
                android:background="@drawable/icon_inventory"
        />
        <ImageButton
                android:contentDescription="@string/shop_icon_description"
                android:layout_width="wrap_content"
                android:layout_height="70dp" android:id="@+id/shop_icon" android:layout_weight="1"
                android:background="@drawable/icon_shop"
        />
    </LinearLayout>
    <ImageButton
            android:contentDescription="@string/house_image_button_description"
            android:layout_width="78dp"
            android:layout_height="71dp" android:id="@+id/home_button"
            android:background="@drawable/inside_house_icon"
            app:layout_constraintTop_toTopOf="@+id/main_background" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/shop_sign" app:layout_constraintHorizontal_bias="0.09"
            android:layout_marginTop="16dp" app:layout_constraintBottom_toTopOf="@+id/shop_sign"
            app:layout_constraintVertical_bias="0.257"/>
    <TextView
            android:contentDescription="@string/pricetag_icon_description"
            android:text="80"
            android:layout_width="75dp"
            android:layout_height="50dp" android:id="@+id/fertilizer_pricetag"
            android:background="@drawable/icon_price_tag"
            android:gravity="center|center_horizontal"
            android:textSize="30sp"
            android:fontFamily="@font/pixelify_sans" android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/pesticide_pricetag" app:layout_constraintHorizontal_bias="0.437"
            app:layout_constraintBottom_toTopOf="@+id/purchase_cf_celosia" android:layout_marginBottom="72dp"
    />
    <TextView
            android:contentDescription="@string/pricetag_icon_description"
            android:text="4S"
            android:layout_width="75dp"
            android:layout_height="50dp" android:id="@+id/cf_celosia_pricetag"
            android:background="@drawable/icon_price_tag"
            android:gravity="center|center_horizontal"
            android:textSize="30sp"
            android:fontFamily="@font/pixelify_sans" android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/navbar"
            android:layout_marginBottom="112dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="84dp"/>
    <TextView
            android:contentDescription="@string/pricetag_icon_description"
            android:text="4S"
            android:layout_width="75dp"
            android:layout_height="50dp" android:id="@+id/blk_dahlia_pricetag"
            android:background="@drawable/icon_price_tag"
            android:gravity="center|center_horizontal"
            android:textSize="30sp"
            android:fontFamily="@font/pixelify_sans" android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/navbar"
            app:layout_constraintStart_toEndOf="@+id/cf_celosia_pricetag"
            app:layout_constraintEnd_toStartOf="@+id/lily_pricetag" android:layout_marginBottom="112dp"
            app:layout_constraintHorizontal_bias="0.58"/>
    <TextView
            android:contentDescription="@string/pricetag_icon_description"
            android:text="4S"
            android:layout_width="75dp"
            android:layout_height="50dp" android:id="@+id/lily_pricetag"
            android:background="@drawable/icon_price_tag"
            android:gravity="center|center_horizontal"
            android:textSize="30sp"
            android:fontFamily="@font/pixelify_sans" android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/navbar"
            android:layout_marginBottom="112dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="60dp"/>
    <TextView
            android:contentDescription="@string/pricetag_icon_description"
            android:text="160"
            android:layout_width="75dp"
            android:layout_height="50dp" android:id="@+id/pesticide_pricetag"
            android:background="@drawable/icon_price_tag"
            android:gravity="center|center_horizontal"
            android:textSize="30sp"
            android:fontFamily="@font/pixelify_sans" android:textColor="@color/black"
            android:layout_marginEnd="60dp"
            app:layout_constraintEnd_toEndOf="@+id/main_background"
            app:layout_constraintBottom_toTopOf="@+id/purchase_lily" android:layout_marginBottom="72dp"/>
    <ImageButton
            android:contentDescription="@string/fertilizer_image_icon_description"
            android:layout_width="59dp"
            android:layout_height="65dp" android:id="@+id/purchase_fertilizer"
            android:background="@drawable/icon_fertilizer"
            app:layout_constraintTop_toTopOf="@+id/shelves_background"
            android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/purchase_pesticide" app:layout_constraintHorizontal_bias="0.425"
            app:layout_constraintBottom_toTopOf="@+id/fertilizer_pricetag" app:layout_constraintVertical_bias="0.13"/>
    <ImageButton
            android:contentDescription="@string/pesticide_image_icon_description"
            android:layout_width="53dp"
            android:layout_height="58dp" android:id="@+id/purchase_pesticide"
            android:background="@drawable/icon_pesticide"
            app:layout_constraintTop_toTopOf="@+id/shelves_background"
            android:layout_marginTop="40dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="64dp"
            app:layout_constraintBottom_toTopOf="@+id/pesticide_pricetag" app:layout_constraintVertical_bias="0.071"/>
    <ImageButton
            android:contentDescription="@string/seeds_icon_description"
            android:layout_width="63dp"
            android:layout_height="72dp" android:id="@+id/purchase_cf_celosia"
            android:background="@drawable/seeds_cf_celosia"
            app:layout_constraintBottom_toTopOf="@+id/cf_celosia_pricetag"
            android:layout_marginBottom="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="88dp"/>
    <ImageButton
            android:contentDescription="@string/seeds_icon_description"
            android:layout_width="63dp"
            android:layout_height="72dp" android:id="@+id/purchase_blk_dahlia"
            android:background="@drawable/seeds_black_dahlia"
            app:layout_constraintBottom_toTopOf="@+id/blk_dahlia_pricetag"
            android:layout_marginBottom="8dp" app:layout_constraintStart_toEndOf="@+id/purchase_cf_celosia"
            app:layout_constraintEnd_toStartOf="@+id/purchase_lily" app:layout_constraintHorizontal_bias="0.54"/>
    <ImageButton
            android:contentDescription="@string/seeds_icon_description"
            android:layout_width="63dp"
            android:layout_height="72dp" android:id="@+id/purchase_lily"
            android:background="@drawable/seeds_lily"
            app:layout_constraintBottom_toTopOf="@+id/lily_pricetag"
            android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="64dp"/>
    <ImageView
            android:contentDescription="@string/coin_image_icon_description"
            android:src="@drawable/icon_coin"
            android:layout_width="53dp"
            android:layout_height="49dp" android:id="@+id/coin_icon"
            app:layout_constraintBottom_toTopOf="@+id/shelves_background"
            app:layout_constraintTop_toTopOf="@+id/main_background"
            app:layout_constraintVertical_bias="0.024"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:text="100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/coin_balance"
            app:layout_constraintTop_toTopOf="@+id/main_background"
            app:layout_constraintBottom_toTopOf="@+id/shelves_background"
            android:textSize="34sp"
            app:layout_constraintStart_toEndOf="@+id/home_button"
            app:layout_constraintVertical_bias="0.076"
            android:fontFamily="@font/pixelify_sans" android:textColor="@color/black"
            android:layout_marginStart="204dp" app:layout_constraintEnd_toStartOf="@+id/coin_icon"
            android:layout_marginEnd="4dp" app:layout_constraintHorizontal_bias="1.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>