<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:context=".view.GrowFragment"
        android:id="@+id/constraintLayout">

    <ImageView
            android:src="@drawable/flower_click_fragment_trees_bg_blur"
            android:layout_width="wrap_content"
            android:contentDescription="@string/trees_bg_blur_description"
            android:layout_height="wrap_content" android:id="@+id/treesBackground"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0" android:adjustViewBounds="false"/>
    <TextView
            android:text="Count: "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textCount" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"/>
    <FrameLayout
            android:id="@+id/imageGroup"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/pesticideButton"
            app:layout_constraintBottom_toTopOf="@+id/buttonHStack"
            android:layout_marginBottom="80dp"
            app:layout_constraintTop_toBottomOf="@+id/goHomeButton" android:layout_marginTop="50dp">

        <ImageView
                android:id="@+id/flowerImage"
                android:layout_width="wrap_content"
                android:layout_height="400dp"
                android:contentDescription="@string/flower_image_description"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="25dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop" android:padding="50dp"/>

        <ImageView
                android:id="@+id/flowerPotImage"
                android:layout_width="275dp"
                android:layout_height="275dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="255dp"
                android:layout_marginRight="15dp"
        />
    </FrameLayout>
    <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp" android:id="@+id/pesticideButton"
            android:background="@drawable/icon_pesticide"
            android:scaleType="centerCrop" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textCount" android:layout_marginTop="125dp"/>
    <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp" android:id="@+id/fertilizerButton"
            android:background="@drawable/icon_fertilizer"
            app:layout_constraintEnd_toEndOf="@+id/treesBackground"
            app:layout_constraintTop_toBottomOf="@+id/pesticideButton"/>
    <ImageView
            android:src="@drawable/icon_house"
            android:layout_width="100dp"
            android:layout_height="100dp" android:id="@+id/goHomeButton"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="175dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/buttonHStack" app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/pooplog" android:gravity="center_horizontal">
        <ImageButton
                android:contentDescription="@string/trophy_image_button_description"
                android:layout_width="85dp"
                android:layout_height="85dp" android:id="@+id/trophyImgButton"
                android:scaleType="centerCrop"
                android:layout_gravity="center_vertical" android:background="@drawable/icon_trophy"
                android:layout_marginLeft="10dp"/>
        <ImageButton
                android:contentDescription="@string/backpack_image_button_description"
                android:src="@drawable/icon_backpack"
                android:layout_width="85dp"
                android:layout_height="85dp" android:id="@+id/backpackImgButton" android:layout_weight="1"
                android:scaleType="centerCrop" android:backgroundTint="@color/cardview_shadow_end_color"
                android:layout_gravity="center_vertical"/>
        <ImageButton
                android:contentDescription="@string/house_image_button_description"
                android:src="@drawable/icon_house"
                android:layout_width="85dp"
                android:layout_height="85dp" android:id="@+id/houseImgButton" android:layout_weight="1"
                android:scaleType="centerCrop" android:backgroundTint="@color/cardview_shadow_end_color"
                android:layout_gravity="center_vertical"/>
        <ImageButton
                android:contentDescription="@string/shop_image_button_description"
                android:src="@drawable/icon_shop"
                android:layout_width="85dp"
                android:layout_height="85dp" android:id="@+id/shopImgButton" android:layout_weight="1"
                android:scaleType="centerCrop" android:backgroundTint="@color/cardview_shadow_end_color"
                android:layout_gravity="center_vertical" android:layout_marginRight="10dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>