<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.SignInFragment"
        android:id="@+id/SignInScreenFragment">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/sign_in_screen_background"
            android:id="@+id/sign_in_screen_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="fitXY"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            app:srcCompat="@drawable/sign_in_screen_logo"
            android:id="@+id/sign_in_screen_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop" />

    <LinearLayout
            android:id="@+id/sign_in_screen_linear_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="@+id/sign_in_screen_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_screen_logo">

        <EditText
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:inputType="text"
                android:hint="@string/sign_in_screen_player_name"
                android:ems="10"
                android:id="@+id/sign_up_screen_first_name"
                android:background="@drawable/edit_text_background"
                android:padding="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_screen_logo"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/pixelify_sans"
                android:textSize="25sp"
                android:textColor="#000000" />


        <EditText
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:inputType="text"
                android:hint="@string/hint_text_email"
                android:ems="10"
                android:id="@+id/sign_up_screen_email"
                android:background="@drawable/edit_text_background"
                android:padding="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_screen_logo"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/pixelify_sans"
                android:textSize="25sp"
                android:textColor="#000000" />

        <EditText
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:inputType="textPassword"
                android:hint="@string/hint_text_password"
                android:ems="10"
                android:id="@+id/sign_up_screen_password"
                android:background="@drawable/edit_text_background"
                android:padding="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_screen_logo"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/pixelify_sans"
                android:textSize="25sp"
                android:textColor="#000000" />
        <Button
                android:layout_width="wrap_content"
                android:layout_height="125dp"
                android:id="@+id/sign_up_screen_signup_button"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_screen_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:backgroundTint="@null"
                android:text="@string/sign_up_screen_sign_up_text"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/sign_in_flow_button"
                android:fontFamily="@font/pixelify_sans"
                android:textSize="25sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>